--- a/musicshop/templates/base.html
+++ b/musicshop/templates/base.html
@@ -6,6 +6,19 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
 </head>
 <body>
+    <nav class="navbar navbar-light bg-faded">
+      <ul class="nav navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url "products:list" %}">Products</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url "orders:cart" %}">Cart</a>
+        </li>
+      </ul>
+    </nav>
     <div class="container">
         {% if messages %}
             <div class="row">
