--- a/musicshop/templates/orders/cart.html
+++ b/musicshop/templates/orders/cart.html
@@ -2,11 +2,20 @@
 
 {% block content %}
     <table class="table table-striped">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Quantity</th>
+                <th>Price</th>
+                <th>X</th>
+            </tr>
+        </thead>
         {% for product in products %}
             <tr>
-                <td>{{ product }}</td>
+                <td><a href="{{ product.get_absolute_url }}">{{ product }}</a></td>
                 <td>{{ product.quantity }}</td>
-                <td>{{ product.price_all }}</td>
+                <td>{{ product.price_all|floatformat:2}}</td>
+                <td><a href="{% url "orders:remove_from_cart" %}?pk={{ product.pk }}">remove</a></td>
             </tr>
         {% endfor %}
         <tfoot>
@@ -14,10 +23,11 @@
                 <td colspan="2">
                     Total:
                 </td>
-                <td>
-                    {{ total }}
+                <td colspan="2">
+                    <strong>{{ total|floatformat:2 }}</strong>
                 </td>
             </tr>
         </tfoot>
     </table>
+    <a class="btn btn-primary" href="{% url 'orders:prepare' %}">Zamow</a>
 {% endblock %}
