--- a/musicshop/templates/products/product_detail.html
+++ b/musicshop/templates/products/product_detail.html
@@ -22,7 +22,7 @@
             <input type="number" name="quantity" placeholder="Ilość" value="1">
             <button class="btn btn-primary" type="submit">Dodaj do koszyka</button>
         </form>
-        <a href="{% url "products:list" %}" class="card-link">Wróć</a>
+        <a href="{% url "products:list" %}" class="card-link">Lista produktów</a>
       </div>
     </div>
 </div>
