--- a/musicshop/templates/base.html
+++ b/musicshop/templates/base.html
@@ -4,6 +4,7 @@
 <head>
     <title></title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}"/>
 </head>
 <body>
     <nav class="navbar navbar-light bg-faded">
@@ -29,7 +30,9 @@
                 {% endfor %}
             </div>
         {% endif %}
-        {% block content %}{% endblock %}
+        <div class="block">
+            {% block content %}{% endblock %}
+        </div>
     </div>
 </body>
 </html>
