--- a/musicshop/templates/base.html
+++ b/musicshop/templates/base.html
@@ -8,17 +8,28 @@
 </head>
 <body>
     <nav class="navbar navbar-light bg-faded">
-      <ul class="nav navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="/">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url "products:list" %}">Products</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url "orders:cart" %}">Cart</a>
-        </li>
-      </ul>
+        <div class="container">
+          <ul class="nav navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url "products:list" %}">Products</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{% url "orders:cart" %}">Cart</a>
+            </li>
+            <li class="nav-item pull-xs-right">
+              <a class="nav-link" href="#">Rejestracja</a>
+            </li>
+            <li class="nav-item pull-xs-right">
+              <a class="nav-link" href="#">Logowanie</a>
+            </li>
+            <li class="nav-item pull-xs-right">
+              <a class="nav-link" href="#">Wyloguj</a>
+            </li>
+          </ul>
+        </div>
     </nav>
     <div class="container">
         {% if messages %}
